--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
 body {
   --bg: white;
-  --textNormal: #222;
-  --textTitle: #222;
-  --textLink: rgb(66, 74, 104);
+  --textNormal: rgba(0, 0, 0, .84);
+  --textTitle: rgba(0, 0, 0, .84);
+  --textLink: rgba(0, 0, 0, .84);
   --hr: hsla(0, 0%, 0%, 0.2);
   background-color: var(--bg);
 }
@@ -10,10 +10,10 @@ body {
 body.dark {
   -webkit-font-smoothing: antialiased;
 
-  --bg: #222;
-  --textNormal: #ddd;
-  --textTitle: white;
-  --textLink: #7180B9;
+  --bg: #282c35;
+  --textNormal: hsla(0, 0%, 100%, 0.88);
+  --textTitle: hsla(0, 0%, 100%, 0.88);
+  --textLink: hsla(0, 0%, 100%, 0.88);
   --hr: hsla(0, 0%, 100%, 0.2);
 }
 
@@ -47,7 +47,7 @@ h3 {
 
 a {
   color: var(--textLink);
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 a.gatsby-resp-image-link {
