--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,7 @@ body {
     background-color var(--duration) var(--timing);
 }
 
-body.dark {
+/* body.dark {
   -webkit-font-smoothing: antialiased;
   --bg: #282c35;
   --tagBg: #fff;
@@ -22,7 +22,7 @@ body.dark {
   --textTitle: hsla(0, 0%, 100%, 0.88);
   --textLink: hsla(0, 0%, 100%, 0.88);
   --hr: hsla(0, 0%, 100%, 0.2);
-}
+} */
 
 h1 {
   line-height: 1.5;
