--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,6 @@ body {
     background-color var(--duration) var(--timing);
 }
 
-a.gatsby-resp-image-link {
+/* a.gatsby-resp-image-link {
   box-shadow: none;
-}
+} */
