fix home screen ui

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,8 @@
   --text-primary: #222326;
   --text-secondary: #c1c3c6;
 
+  --bg-gray: #f9fafb;
+
   --space: 4px;
   --space-2x: 8px;
   --space-3x: 12px;
