--- a/src/styles/components/HomeRecentArticlesSection.module.css
+++ b/src/styles/components/HomeRecentArticlesSection.module.css
@@ -1,18 +1,43 @@
 .container {
-  /* display: flex; */
-  width: 1280px;
+  max-width: 1280px;
   margin: 0 auto;
   padding: 96px 32px;
-  /* display: grid;
-  grid-template-columns: auto 300px;
-  gap: 130px; */
 }
 
 .content {
   display: flex;
+  flex-direction: column;
   padding: 24px 0;
 }
 
-.layoutGrid {
-  /* grid-template-columns: repeat(12, minmax(0, 1fr)); */
+@media (min-width: 992px) {
+  .content {
+    flex-direction: row;
+  }
+}
+
+.main {
+  flex: 0 0 100%;
+}
+@media (min-width: 992px) {
+  .main {
+    flex: 0 0 80%;
+  }
+}
+.sidebar {
+  flex: 0 0 100%;
+}
+
+@media (min-width: 992px) {
+  .sidebar {
+    display: block;
+    flex: 0 0 20%;
+    margin-left: var(--space-4x);
+  }
+}
+
+.listButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
