--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -14,7 +14,7 @@
 .headerLogo {
   color: var(--text-primary);
   font-size: 32px;
-  padding: 0 var(--space-8x);
+  padding: 0 var(--space-8x) 0 0;
 }
 .search {
   margin-left: auto;
