--- a/src/styles/components/HomeRecentArticlesSidebar.module.css
+++ b/src/styles/components/HomeRecentArticlesSidebar.module.css
@@ -2,6 +2,7 @@
   font-size: 20px;
   font-weight: 600;
   color: var(--text-primary);
+  margin-bottom: var(--space-2x);
 }
 
 .sidebarItem {
@@ -10,6 +11,21 @@
 
 .sidebarTagListItem {
   font-size: 16px;
-  padding: var(--space-4x) 0;
   border-bottom: 1px solid #ededed;
+}
+
+.sidebarTagListItemLink:hover {
+  background-color: var(--bg-gray-1);
+}
+
+.sidebarTagListItemLink {
+  width: 100%;
+  height: 100%;
+  display: block;
+  padding: var(--space-4x) var(--space-2x);
+  transition: var(--default-transition);
+}
+
+.seriesBtn {
+  margin-top: var(--space-6x);
 }
