--- a/src/styles/components/BlogPostProvider.module.css
+++ b/src/styles/components/BlogPostProvider.module.css
@@ -4,8 +4,14 @@
   margin-top: 64px;
 }
 .h3 {
+  font-size: 28px;
+  line-height: 1.3;
+  margin-top: 24px;
 }
 .h4 {
+  font-size: 24px;
+  line-height: 1.3;
+  margin-top: 24px;
 }
 
 .p {
@@ -22,8 +28,18 @@
 }
 
 .a {
+  text-decoration: underline;
+  cursor: pointer;
+  color: var(--primary);
 }
 .ul {
+  margin-top: var(--space-5x);
 }
-.ol {
+.ulli {
+  list-style-type: disc;
+  margin: var(--space-2x) var(--space-5x);
+}
+.olli {
+  list-style: decimal;
+  margin: var(--space-2x) var(--space-5x);
 }
